--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,12 +158,12 @@ opacity:0.8;
 
 
 #page-content {
-	position:relative; background:#f2f2ee; padding:20px;
+	position:relative; background:#f2f2ee; padding:20px 20px 0px 20px;
 	-moz-box-shadow: 1px 1px 12px 2px #aaa; -webkit-box-shadow: 1px 1px 12px 2px #aaa; box-shadow: 1px 1px 12px 2px #aaa;
 	border-radius:0px 0px 12px 12px;
 }
 
-#sidebar{width:220px; padding:10px; float:left; background:#fff; border-radius:8px; border:1px solid #ddd;}
+#sidebar{width:220px; padding:10px; float:left; background:#fff; border-radius:8px; border:1px solid #ddd; margin-bottom:20px;}
 
 .sticky-wrapper {float:left; padding:0px 0px 0px 0px; margin-right:20px;}
 
@@ -176,7 +176,7 @@ opacity:0.8;
 article{width:695px; float:left; margin-left:20px; padding:0px; }
 article.full{}
 
-section {margin-bottom:20px; background:#fff; border-radius:8px; border:1px solid #ddd; padding:10px 20px 10px 20px;}
+section {margin-bottom:20px; background:#fff; border-radius:8px; border:1px solid #ddd; padding:10px 20px 20px 20px;}
 .subsection {margin-bottom:20px;}
 .subsection:last-child {margin-bottom:0px;}
  
@@ -319,16 +319,22 @@ li{line-height:180%;}
 }
 
 
-#home-download {
-		text-align:center; position:relative; margin-top:0px; height:130px; left:150px; width:355px;
-}
+#home-download {text-align:center; position:relative; margin-top:0px; height:130px; left:150px; width:355px;}
 
-a:hover #home-download {
+#home-download-link {position:absolute; top:10px; background:#e5f1d3; height:55px; width:350px; border-radius:12px; border:4px solid #233d00;}
+
+#home-download-logo {position:absolute; background:url('../img/download.png'); height:106px; width:101px;}
+
+.underline {text-decoration:underline;}
+
+a.underline:hover {text-decoration:none;}
+
+a:hover #home-download-link{
 	opacity:0.8;
 }
 
-a:active #home-download {
-	top:1px; left:151px;
+a:active #home-download-link{
+	top:11px; left:1px;
 }
 
 	
