--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -339,6 +339,7 @@ a:active #home-download-link{
 	top:11px; left:1px;
 }
 
+.download-button {top:10px; background:#e5f1d3; height:55px; border-radius:12px; border:4px solid #233d00;}
 	
 .tutorial-links {width:640px; height:200px; border-top:1px solid #ddd; padding:30px 0px 40px 0px; }
 
