Update font-awesome to version 5.8.1 and switch to https via CDN.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -412,7 +412,7 @@ span.link:hover {text-decoration:underline;}
 
 /* Social media icons */
  
-i.fa {
+i.fab {
 	width: 30px;
 	height: 30px;
 	font-size: 25px;
