--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,6 +152,8 @@ header a:hover {text-decoration:underline;}
 
 .newsimg_large {float:left; width:300px; margin:4px 12px 0px 0px;}
 
+.libimg { border: 1px; border-style: solid; margin: 0 0.6em; }
+
 #donate {margin-top:10px;}
 #donate h4 {margin-bottom:5px; font-weight:600;}
 	
