--- a/cheatsheet/css/main.css
+++ b/cheatsheet/css/main.css
@@ -7,7 +7,7 @@ body {
 }
 
 a {
-	color: #447FFF;
+	color: #000099;
 }
 
 h1 {
@@ -23,6 +23,21 @@ header h1 {
 	display: inline-block;
 	margin-right: 1ex;
 }
+
+/* colour the header 'Open' & 'SCAD' and make bolder and chunky
+like the cornfield default scheme from colormap.cc
+Open - #9dcb51;} OPENCSG_FACE_BACK_COLOR - green
+SCAD - #f9d72c;} OPENCSG_FACE_FRONT_COLOR - yellow
+ - for reference #FFFFE5;} BACKGROUND_COLOR - pale yellow/cream, used above 
+*/
+header h1.title {color:#f9d72c; letter-spacing:-1px; font-weight:700;}
+header h1 span.green {color:#9dcb51; letter-spacing:0px;}
+
+header h2.subtitle {color:black; letter-spacing:-1px;}
+
+/* colour OPEN & SCAD in the home/section heading the same*/
+section h1 strong {color:#f9d72c; font-weight:700; letter-spacing:-1px;}
+section h1 strong span.green {color:#9dcb51; letter-spacing:0px;}
 
 h2 {
 	font-family: "UbuntuMonoBold", "Ubuntu Mono", 'courier new', monospace, sans-serif;
@@ -92,6 +107,7 @@ dt {
 
 dd {
 	margin: 0 0 .5em 3em;
+        color: #000
 }
 
 ul {
