--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -362,8 +362,9 @@ a:active #home-download-link{
 	top:11px; left:1px;
 }
 
+.store-button {text-align:center; display:inline-block; padding:8px;}
 .download-button {background:#e5f1d3; border-radius:12px; border:4px solid #233d00; text-align:center; display:inline-block; padding:8px; margin:8px;}
-	
+
 .tutorial-links {width:640px; height:200px; border-top:1px solid #ddd; padding:30px 0px 40px 0px; }
 
 .tutorial-links:hover {opacity:0.8;}
