--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,6 +182,8 @@ opacity:0.8;
 article{width:695px; float:left; margin-left:20px; padding:0px; }
 article.full{}
 
+section-area { margin-bottom:20px; display:inline-block; border-radius:8px; padding:0px; }
+section-area h1 { padding: 8px 20px 8px 20px; }
 section {margin-bottom:20px; background:#fff; border-radius:8px; border:1px solid #ddd; padding:10px 20px 20px 20px;}
 .subsection {margin-bottom:20px;}
 .subsection:last-child {margin-bottom:0px;}
@@ -369,6 +371,10 @@ a:active #home-download-link{
 
 .store-button {text-align:center; display:inline-block; padding:8px;}
 .download-button {background:#e5f1d3; border-radius:12px; border:4px solid #233d00; text-align:center; display:inline-block; padding:8px; margin:8px;}
+
+.link-grid { display: grid; grid-column-gap: 8px; grid-template-columns: auto auto auto auto; }
+.link-button { height:100%; display: block; background:#e5f1d3; border-radius:8px; border:1px solid #f9d72c; text-align:center; padding: 2px 8px; margin:0px;}
+.link-button h1 { margin: 0px; padding: 0px; }
 
 .tutorial-links {width:640px; height:200px; border-top:1px solid #ddd; padding:30px 0px 40px 0px; }
 
