--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,7 +182,7 @@ opacity:0.8;
 article{width:695px; float:left; margin-left:20px; padding:0px; }
 article.full{}
 
-section-area { margin-bottom:20px; display:inline-block; border-radius:8px; padding:0px; }
+section-area { margin-bottom:20px; display:inline-block; width:100%; border-radius:8px; padding:0px; }
 section-area h1 { padding: 8px 20px 8px 20px; }
 section-area p { padding: 8px 20px 8px 20px; }
 section {margin-bottom:20px; background:#fff; border-radius:8px; border:1px solid #ddd; padding:10px 20px 20px 20px;}
@@ -373,9 +373,11 @@ a:active #home-download-link{
 .store-button {text-align:center; display:inline-block; padding:8px;}
 .download-button {background:#e5f1d3; border-radius:12px; border:4px solid #233d00; text-align:center; display:inline-block; padding:8px; margin:8px;}
 
-.link-grid { display: grid; grid-column-gap: 8px; grid-template-columns: auto auto auto auto auto; }
+.link-grid { display: grid; width:100%; grid-column-gap: 8px; grid-auto-columns: auto; grid-auto-flow: column;}
 .link-button { height:100%; display: block; background:#e5f1d3; border-radius:8px; border:1px solid #f9d72c; text-align:center; padding: 2px 8px; margin:0px;}
 .link-button h1 { margin: 0px; padding: 0px; }
+.link-button i { color: rgba(0, 0, 0, 0.4); font-size: 3em; margin: 0.2em; }
+.link-button .selected { color: rgba(0, 0, 0, 0.6); }
 
 .tutorial-links {width:640px; height:200px; border-top:1px solid #ddd; padding:30px 0px 40px 0px; }
 
